--- a/examples/NodeClass_do.yaml
+++ b/examples/NodeClass_do.yaml
@@ -1,20 +1,26 @@
 apiVersion: "nodeset.k8s.io/v1alpha1"
 kind: NodeClass
 metadata:
-  name: kubermatic-coreos-worker-v1-6-4-0
+  name: do-sfo1-2gb-coreos-stable
 nodeController: kube-machine
 config:
   dockerMachineFlags:
     digitalocean-access-token: "YOUR_DO_TOKEN"
-    digitalocean-region: "fra1"
+    digitalocean-region: "sfo1"
+    digitalocean-size: "2gb"
     digitalocean-ssh-user: "core"
     digitalocean-image: "coreos-stable"
-    digitalocean-size: "2gb"
   provider: "digitalocean"
   provisioning:
+    users:
+      - name: "apiserver"
+        ssh_keys:
+          - "ssh-rsa AAAAAAAA foo@bar.com"
+        sudo: true
     commands:
       - "sudo systemctl daemon-reload"
       - "sudo systemctl enable docker && sudo systemctl restart docker"
+      - "sudo systemctl start download-kubelet.service"
       - "sudo systemctl enable kubelet && sudo systemctl restart kubelet"
     files:
       - path: "/etc/kubernetes/bootstrap.kubeconfig"
@@ -24,62 +30,67 @@ config:
           apiVersion: v1
           clusters:
           - cluster:
-              certificate-authority-data: AAAAAAAAAAAAAAAAAAAAAA
-              server: https://0.0.0.0:30000
-            name: kd9wj07zh
+              certificate-authority-data: AAAAAAAAAAAAAAAAAA
+              server: https://0.0.0.0:8443
+            name: default
           contexts:
           - context:
-              cluster: kd9wj07zh
-              user: kd9wj07zh
-            name: kd9wj07zh
-          current-context: kd9wj07zh
+              cluster: default
+              user: default
+            name: default
+          current-context: default
           kind: Config
           preferences: {}
           users:
-          - name: kd9wj07zh
+          - name: default
             user:
-              token: AAAAAAAAAAAAAAAAAAAAAA
+              token: TOKEN
+
+      - path: "/etc/systemd/system/download-kubelet.service"
+        permissions: "0640"
+        owner: "root"
+        content: |-
+          [Unit]
+          Description=Download Kubelet and requirements
+          After=network.target
+
+          [Service]
+          Type=oneshot
+          ExecStartPre=/usr/bin/mkdir -p /opt/bin /opt/cni/bin /etc/cni/net.d /var/run/kubernetes /var/lib/kubelet /etc/kubernetes/manifests /var/log/containers
+          ExecStartPre=/bin/bash -c "/usr/bin/curl -L -o /tmp/cni-amd64.tgz https://github.com/containernetworking/cni/releases/download/v0.5.2/cni-amd64-v0.5.2.tgz && tar -xvf /tmp/cni-amd64.tgz -C /opt/cni/bin/"
+          ExecStartPre=/usr/bin/curl -L -o /opt/bin/socat https://s3-eu-west-1.amazonaws.com/kubermatic/coreos/socat
+          ExecStartPre=/usr/bin/chmod +x /opt/bin/socat
+          ExecStartPre=/usr/bin/curl -L -o /opt/bin/kubelet https://storage.googleapis.com/kubernetes-release/release/v1.6.7/bin/linux/amd64/kubelet
+          ExecStart=/usr/bin/chmod +x /opt/bin/kubelet
+          RemainAfterExit=true
+
+          [Install]
+          WantedBy=multi-user.target
 
       - path: "/etc/systemd/system/kubelet.service"
         permissions: "0640"
         owner: "root"
         content: |-
           [Unit]
-          Description=Kubernetes Kubelet
+          Description=Kubelet
+          After=network.target download-kubelet.service
+
           [Service]
-          Environment=KUBELET_IMAGE_TAG=v1.6.4_coreos.0
-          Environment="RKT_RUN_ARGS=--uuid-file-save=/var/run/kubelet-pod.uuid \
-            --volume dns,kind=host,source=/etc/resolv.conf \
-            --mount volume=dns,target=/etc/resolv.conf \
-            --volume cni-conf,kind=host,source=/etc/cni/net.d \
-            --mount volume=cni-conf,target=/etc/cni/net.d \
-            --volume var-log,kind=host,source=/var/log \
-            --mount volume=var-log,target=/var/log"
-          ExecStartPre=/usr/bin/mkdir -p /etc/cni/net.d
-          ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
-          ExecStartPre=/usr/bin/mkdir -p /var/log/containers
-          ExecStartPre=-/usr/bin/rkt rm --uuid-file=/var/run/kubelet-pod.uuid
-          ExecStart=/usr/lib/coreos/kubelet-wrapper \
-            --api-servers=https://0.0.0.0:30000 \
+          Restart=always
+          RestartSec=10
+          Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/bin"
+          ExecStart=/opt/bin/kubelet \
+            --api-servers=https://0.0.0.0:8443 \
             --container-runtime=docker \
             --allow-privileged=true \
             --pod-manifest-path=/etc/kubernetes/manifests \
-            --register-node=true \
             --cni-conf-dir=/etc/cni/net.d \
             --network-plugin=cni \
             --cluster-dns=10.10.10.10 \
             --cluster_domain=cluster.local \
             --kubeconfig=/etc/kubernetes/kubeconfig \
             --experimental-bootstrap-kubeconfig=/etc/kubernetes/bootstrap.kubeconfig \
-            --cert-dir=/etc/kubernetes
-          ExecStop=-/usr/bin/rkt stop --uuid-file=/var/run/kubelet-pod.uuid
-          Restart=always
-          RestartSec=10
+            --cert-dir=/etc/kubernetes/
+
           [Install]
           WantedBy=multi-user.target
-resources:
-  - type: reference
-    reference:
-      kind: secret
-      apiVersion: v1
-      name: digitalocean-token
