--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: go get -u github.com/golang/dep/cmd/dep
-      - run: dep ensure
+      - run: dep ensure -vendor-only
       - persist_to_workspace:
           root: /go/src/github.com/kube-node/kube-machine
           paths:
