--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,5 +1,3 @@
-required = ["k8s.io/code-generator/cmd/client-gen"]
-
 [[constraint]]
   branch = "make-auth-provisioning-skipable"
   name = "github.com/docker/machine"
@@ -12,19 +10,18 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
   name = "github.com/spf13/pflag"
 
 [[constraint]]
+  name = "github.com/prometheus/client_golang"
+  version = "v0.8.0"
+
+[[constraint]]
   name = "github.com/kube-node/nodeset"
   branch = "henrik"
   source = "github.com/mrIncompetent/nodeset"
 
 [[constraint]]
-  branch = "release-5.0"
+  name = "k8s.io/apimachinery"
+  branch = "release-1.8"
+
+[[constraint]]
   name = "k8s.io/client-go"
-
-[[constraint]]
-  name = "k8s.io/code-generator"
-  branch = "sttts-codegen-scripts"
-  source = "github.com/sttts/code-generator"
-
-[[constraint]]
-  name = "github.com/prometheus/client_golang"
-  version = "v0.8.0"
+  branch = "release-5.0"
