--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,7 +1,7 @@
 [[constraint]]
-  branch = "feature/remove-os-ssh-keys"
   name = "github.com/docker/machine"
   source = "github.com/kubermatic/machine"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/golang/glog"
