--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,8 +15,7 @@
 
 [[constraint]]
   name = "github.com/kube-node/nodeset"
-  branch = "henrik"
-  source = "github.com/mrIncompetent/nodeset"
+  branch = "master"
 
 [[constraint]]
   name = "k8s.io/apimachinery"
