--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -4,10 +4,8 @@
   branch = "master"
 
 [[constraint]]
-  name = "github.com/golang/glog"
-
-[[constraint]]
   name = "github.com/spf13/pflag"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/prometheus/client_golang"
@@ -15,12 +13,21 @@
 
 [[constraint]]
   name = "github.com/kube-node/nodeset"
+  source = "github.com/kubermatic/nodeset"
+  branch = "master"
+
+[[constraint]]
+  name = "github.com/golang/glog"
   branch = "master"
 
 [[constraint]]
   name = "k8s.io/apimachinery"
-  branch = "release-1.8"
+  branch = "release-1.9"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  branch = "release-5.0"
+  branch = "release-6.0"
+
+[[constraint]]
+  name = "k8s.io/apiextensions-apiserver"
+  branch = "release-1.9"
